💡 write README.md

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "use-flush",
   "version": "1.0.0",
-  "description": "React hooks for flushing frequent effect. It can optimize application via reducing re-rendering caused of effect",
+  "description": "React hooks for flushing frequent effect. It can optimize application via reducing re-rendering caused of effect.",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
