--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "use-flush",
-  "version": "1.0.1",
-  "description": "React hooks for flushing frequent effect. It can optimize application via reducing re-rendering caused of effect.",
+  "version": "1.0.2",
+  "description": "React hooks for flushing frequently changing state. It can optimize application via reducing re-rendering caused of changing state.",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "rimraf dist && mkdirp dist && rollup -c",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint -c .eslintrc.js --fix --debug './src/**/*.ts{,x}'",
+    "test": "jest ./src --no-cache",
+    "prepare": "npm run precommit && npm run build",
+    "precommit": "npm run lint && npm t"
   },
   "keywords": [
     "react",
@@ -36,11 +41,34 @@
     "react": "^16.8.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
+    "@babel/runtime-corejs2": "^7.4.4",
+    "@types/jest": "^24.0.12",
     "@types/react": "^16.8.17",
     "@types/react-dom": "^16.8.4",
+    "@typescript-eslint/eslint-plugin": "^1.8.0",
+    "@typescript-eslint/parser": "^1.8.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.8.0",
+    "babel-loader": "^8.0.6",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-react-hooks": "^1.6.0",
+    "husky": "^2.2.0",
+    "jest": "^24.8.0",
     "mkdirp": "^0.5.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-hooks-testing-library": "^0.5.0",
+    "react-test-renderer": "^16.8.6",
     "rimraf": "^2.6.3",
     "rollup": "^1.11.3",
     "rollup-plugin-terser": "^4.0.4",
